--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cheerio": "^1.0.0-rc.12",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
+    "html-react-parser": "^4.2.2",
     "next": "13.4.19",
     "postcss": "8.4.29",
     "react": "18.2.0",
