--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "cheerio": "^1.0.0-rc.12",
+    "domhandler": "^5.0.3",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "html-react-parser": "^4.2.2",
